--- a/templates/search/deposits.jade
+++ b/templates/search/deposits.jade
@@ -29,12 +29,12 @@ if  depo_pubtype
   h3 Dépots externes
     table.table.table-striped.table-hover
     tr
-        td {% trans "Nom du dépot" %}
-        td {% trans "Diffuseur" %}
-        td {% trans "Dernier état de dépôt" %}
-        td {% trans "Alertes" %}
-        td Initial qty
-        td Total price
+        td {% trans "Deposit name" %}
+        td {% trans "Distributor" %}
+        td {% trans "Last checkout" %}
+        td {% trans "Alerts" %}
+        td {% trans "Initial qty" %}
+        td {% trans "Total price" %}
 
     for dep in depo_pubtype
       tr
