fix loading of js and css

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -23,8 +23,7 @@ html(ng-app="abelujo")
   head
     link(rel='stylesheet', type='text/css', href='{% static "search/style.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-ui-select/dist/select.css" %}')
-    link(rel='stylesheet', type='text/css', href='{% static "bower_components/datatables/media/js/jquery.dataTables.min.js" %}')
-    script(type='text/javascript', src="{% static 'bower_components/jquery/dist/jquery.js' %}") // load jquery before django_bootstrap.
+    link(rel='stylesheet', type='text/css', href='{% static "bower_components/datatables/media/css/jquery.dataTables.min.css" %}')
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
