--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -62,9 +62,11 @@ for b in result_list
                 span {{ b.isbn }}
             {% endif %}
             td
+                {% if b.price %}
                 span
                   b prix 
                   span {{ b.price }} €
+                {% endif %}
 
         if b.description
           div {{b.description}}
