--- a/templates/search/basket_auto_command.jade
+++ b/templates/search/basket_auto_command.jade
@@ -46,7 +46,9 @@ div(ng-cloak, ng-controller="basketToCommandController")
                 td: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
                 td {{ 'card.price' |ng }} €
                 td {{ 'card.quantity' |ng }}
-                td: input.my-number-input(type="number", min=0, max=99, ng-model="card.threshold")
+                td
+                  input.my-number-input(type="number", min=0, max=99, ng-model="card.threshold")
+                  i.glyphicon.glyphicon-remove(ng-click="remove_from_selection(pub_id, $index)", style="padding-left: 1em;")
 
   // we'll use the modal shortly !
   script(type="text/ng-template", id="commandModal.html")
