--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -91,6 +91,6 @@ div(ng-controller="inventoryNewController")
             )
 
      .col-md-1
-       i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
+       i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="float: right;")
 
 {% endblock content %}
