--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -36,8 +36,9 @@ div(ng-controller="basketsController")
 
 
  .col-md-9
-    div(ng-repeat="it in copies")
-      div {{ " it.title " | ng }}
+   table.table.table-condensed.table-striped
+     tr(ng-repeat="it in copies")
+       td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
 
  script(type="text/ng-template", id="commandModal.html")
     div.modal-header
