--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -46,9 +46,9 @@ div(ng-controller="basketsController")
 
  .col-md-9
    table.table.table-condensed.table-striped
-     tr(ng-repeat="it in copies")
+     tr(ng-repeat="it in copies", ng-mouseenter="show_buttons[$index] = true", ng-mouseleave="show_buttons[$index] = false")
        td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
-       td: i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="padding-left: 1em;", title='{% trans "Remove from basket" %}')
+       td: i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="padding-left: 1em;", title='{% trans "Remove from basket" %}', ng-show="show_buttons[$index]")
 
  script(type="text/ng-template", id="commandModal.html")
     div.modal-header
