--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -40,7 +40,7 @@ div(ng-controller="basketsController")
      i.glyphicon.glyphicon-plus.mouse-pointer(title='{% trans "Create a basket" %}', ng-click="open('sm')")
    ul.list-group
      div(ng-repeat="it in baskets")
-        li.list-group-item(ng-click="showBasket($index)") {{ " it.name " | ng }}
+        li.list-group-item.mouse-pointer(ng-click="showBasket($index)") {{ " it.name " | ng }}
             span.badge {{ " it.length " | ng }}
 
 
@@ -50,12 +50,14 @@ div(ng-controller="basketsController")
        td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
        td: i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="padding-left: 1em;", title='{% trans "Remove from basket" %}', ng-show="show_buttons[$index]")
 
- script(type="text/ng-template", id="commandModal.html")
+ script(type="text/ng-template", id="basketModal.html")
     div.modal-header
       h3.modal-title {% trans "Create a basket" %}
 
     div.modal-body
       label Name
-      input(type="text")
+      input#default-input(type="text", ng-model="new_name")
+
+      button.btn.btn-primary(ng-click="ok()") OK
 
 {% endblock content %}
