--- a/templates/base.jade
+++ b/templates/base.jade
@@ -46,25 +46,32 @@ html(ng-app="abelujo")
     div.col-md-2(id="menu")
       div
         ul.nav.nav-pills.nav-stacked
-          li
+          li(ng-class="{active: url == 'collection' }")
             a(href='{% url "card_collection" %}') {% trans "My stock" %}
-          li
+
+          li(ng-class="{active: url == 'sell' }")
             a(href='{% url "card_sell" %}') {% trans "Sell" %}
-          li
+
+          li(ng-class="{active: url == 'search' }")
             a(href='{% url "card_index" %}') {% trans "New entry" %}
-          li
+
+          li(ng-class="{active: url == 'deposits' }")
             a(href='{% url "deposits" %}') {% trans "Deposits" %}
-          li
+
+          li(ng-class="{active: url == 'inventories' }")
             a(href='{% url "inventories" %}') {% trans "Inventories" %}
-          li
+
+          li(ng-class="{active: url == 'commands' }")
             a(href='{% url "basket_auto_command" %}') {% trans "To command" %}
               span.badge.ng-cloak {{ "auto_command_total" | ng }}
-          li
+
+          li(ng-class="{active: url == 'baskets' }")
             a(href='{% url "baskets" %}') {% trans "Baskets" %}
-          li
+
+          li(ng-class="{active: url == 'history' }")
             a(href='{% url "search_history" %}') {% trans "History" %}
 
-          li
+          li(ng-class="{active: url == 'alerts' }")
             a(href='{% url "search_alerts" %}') {% trans "Alerts" %}
               span.badge.ng-cloak {{ "alerts_open" | ng }}
 
