--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -42,7 +42,7 @@ div.ng-cloak(ng-controller="sellController")
           p.input-group
             input.form-control(
               type='text'
-              datepicker-popup='{{format}}'
+              uib-datepicker-popup='{{format}}'
               ng-model='date'
               is-open='opened'
               datepicker-options='dateOptions'
@@ -77,7 +77,7 @@ div.ng-cloak(ng-controller="sellController")
               type='text'
               typeahead-loading="loadingCards"
               ng-model='{% verbatim %}copy_selected{% endverbatim %}'
-              typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+              uib-typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
               typeahead-min-length="3"
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
