--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -42,7 +42,8 @@ div(ng-controller="inventoryNewController")
             span.sr-only {{ 'progress_current ' | ng }}
 
        .col-md-3
-         btn.btn.btn-primary(ng-click="save()") Save
+         btn.btn.btn-primary(ng-click="save()") {% trans "Save" %}
+         btn.btn.btn-danger(ng-click="terminate()") {% trans "Terminate…" %}
 
     .row
      .col-lg-9
