--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -52,7 +52,7 @@ div(ng-controller="inventoryNewController")
             type='text'
             typeahead-loading="loadingCards"
             ng-model='{% verbatim %}copy_selected{% endverbatim %}'
-            typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+            uib-typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
             typeahead-min-length="3"
             typeahead-on-select="add_selected_card($item)"
             title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
