--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -76,8 +76,8 @@ div.ng-cloak(ng-controller="sellController")
             input.nullable.form-control(
               type='text'
               typeahead-loading="loadingCards"
-              ng-model='{% verbatim %}copy_selected{% endverbatim %}'
-              uib-typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+              ng-model='copy_selected'
+              uib-typeahead='copy.repr for copy in getCards($viewValue)'
               typeahead-min-length="3"
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
