--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -89,7 +89,7 @@ div(ng-cloak, ng-show="cards", ng-controller="collectionController")
      input.btn.btn-primary(value="{% trans 'Search' %}", ng-click="validate()", type="submit")
 
   //- span: a(href="{% url 'card_collection' %}?format=text")
-        input.btn(type="submit", value="{% trans 'voir en texte' %}", style="float: right;")
+        input.btn(type="submit", value="{% trans 'see as text' %}", style="float: right;")
 
  .row
    .col-md-9
