--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -34,7 +34,7 @@ div(ng-controller="basketsController")
     )
       {{ 'alert.message' | ng }}
 
- h1 Baskets
+ h1 {% trans "Baskets" %}
  .col-md-3
   div
      i.glyphicon.glyphicon-plus.mouse-pointer(title='{% trans "Create a basket" %}', ng-click="open('sm')")
@@ -67,9 +67,9 @@ div(ng-controller="basketsController")
       h3.modal-title {% trans "Create a basket" %}
 
     div.modal-body
-      label Name
+      label {% trans "Name" %}
       input#default-input(type="text", ng-model="new_name")
 
-      button.btn.btn-primary(ng-click="ok()") OK
+      button.btn.btn-primary(ng-click="ok()") {% trans "OK" %}
 
 {% endblock content %}
