--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -59,6 +59,7 @@ div(ng-controller="basketsController")
        i.glyphicon.glyphicon-download
        span.caret
      ul.dropdown-menu
+       li: a(href="#", ng-click="export_csv('txt')") txt
        li: a(href="#", ng-click="export_csv('simple')") csv - {% trans "simple: isbn and quantity" %}
        li: a(href="#", ng-click="export_csv('pdf')") pdf - {% trans "with barcodes" %}
 
