--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -71,9 +71,17 @@ div(ng-controller="basketsController")
      h4   {{ 'cur_basket.name' |ng}}
 
    table.table.table-condensed.table-striped
-     tr(ng-repeat="it in copies", ng-mouseenter="show_buttons[$index] = true", ng-mouseleave="show_buttons[$index] = false")
-       td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
-       td: i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="padding-left: 1em;", title='{% trans "Remove from basket" %}', ng-show="show_buttons[$index]")
+     thead
+       th {% trans "Title" %}
+       th {% trans "In stock" %}
+       th
+     tbody
+       tr(ng-repeat="it in copies", ng-mouseenter="show_buttons[$index] = true", ng-mouseleave="show_buttons[$index] = false")
+         td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
+         td {{ 'it.quantity' | ng}}
+         td
+          input.my-number-input(type="number", min=0, max=99, ng-model="it.basket_qty")
+         td: i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="padding-left: 1em;", title='{% trans "Remove from basket" %}', ng-show="show_buttons[$index]")
 
  script(type="text/ng-template", id="basketModal.html")
     div.modal-header
