--- a/templates/base.jade
+++ b/templates/base.jade
@@ -54,7 +54,7 @@ html(ng-app="abelujo")
             a(href='{% url "card_sell" %}') {% trans "Sell" %}
 
           li(ng-class="{active: url == 'search' }")
-            a(href='{% url "card_index" %}') {% trans "New entry" %}
+            a(href='{% url "card_search" %}') {% trans "New entry" %}
 
           li(ng-class="{active: url == 'deposits' }")
             a(href='{% url "deposits" %}') {% trans "Deposits" %}
