--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -92,7 +92,10 @@ div(ng-cloak, ng-show="cards", ng-controller="collectionController")
         input.btn(type="submit", value="{% trans 'see as text' %}", style="float: right;")
 
  .row
-   .col-md-9
+   .col-md-8
+   .col-md-2
+     button.button.btn(ng-click="toggle_images()")
+      i.glyphicon.glyphicon-th-list
    .col-md-1
      button.button.btn.btn-default(ng-click="open()", ng-show="selected", title='{% trans "Add the cards selected to basket(s)" %}'){% trans 'Add to…' %}
       i.glyphicon.glyphicon-pushpin
@@ -100,34 +103,40 @@ div(ng-cloak, ng-show="cards", ng-controller="collectionController")
 
  table.table.table-striped(ng-show="cards", datatable="ng")
     thead
+      th(ng-show="show_images")
       th {% trans "Title" %}
+      th {% trans "Price" %}
       th {% trans "Authors" %}
       th {% trans "Publishers" %}
       th {% trans "Quantity" %}
+      th {% trans "Places" %}
       th: input(type="checkbox", ng-click="toggleAll()")
 
     tbody
       tr(ng-repeat="card in cards")
+        td(ng-show="show_images")
+            .col-md-6(ng-show="show_images")
+              img.myImg(ng-show="card.img", src="{{ 'card.img' | ng }}")
         td
           .row
-            .col-md-6
-              img.myImg(ng-show="card.img", src="{{ 'card.img' | ng }}")
-            .col-md-6
+            .col-md-9
               h4: a(href="{{ 'card.get_absolute_url' | ng }}") {{ 'card.title' | ng }}
               a(ng-show="card.details_url", href="{{ 'card.details_url' | ng }}", target="_blank") {% trans "See on" %} {{ 'card.data_source' |ng}}
-              div {{ 'card.price' |ng }} €
-              div
+              .row
+               .col-md-6
                 b isbn: 
                 span {{ 'card.isbn' |ng}}
-              div(ng-show="card.places")
-                b lieux: 
-                span {{ 'card.places' | ng}}
+        td
+          div {{ 'card.price' | ng}} €
 
         td
           div(ng-repeat="author in card.authors")
             div {{ 'author.fields.name' |ng}}
         td {{ 'card.pubs_repr' | ng }}
         td {{ 'card.quantity' | ng }}
+        td
+          div(ng-show="card.places") {{ 'card.places' | ng}}
+
         td: input(type="checkbox", ng-model="selected[card.id]")
 
  script(type="text/ng-template", id="collectionModal.html")
