pdf template don't put Abelujo in the title

--- a/templates/pdftemplates/pdf-barcode.jade
+++ b/templates/pdftemplates/pdf-barcode.jade
@@ -24,8 +24,8 @@ head
     }
   body
 
-    h2#header_content(style="{text-align: center;}") Abelujo - {{ list_name }}, {{ date }}
-    div#footer_content {% trans "page" %} <pdf:pagenumber>
+    h2#header_content(style="{text-align: center;}")  {{ list_name }}, {{ date }}
+    div#footer_content(style="{text-align: center;}") {% trans "page" %} <pdf:pagenumber> Abelujo.cc
     // of <pdf:pagecount>
 
     table
