Collection first page: order by creation date

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -101,7 +101,7 @@ div(ng-cloak, ng-show="cards", ng-controller="collectionController")
       i.glyphicon.glyphicon-pushpin
 
 
- table.table.table-striped(ng-show="cards", datatable="ng")
+ table.row-border.hover(ng-show="cards", datatable="ng")
     thead
       th(ng-show="show_images")
       th {% trans "Title" %}
